syntax = "proto3";
package logistics;

option go_package = "github.com/blackhorseya/godine/entity/domain/logistics/biz";

import "entity/domain/logistics/model/logistics.proto";

message CreateDeliveryRequest {
  string order_id = 1;
  string user_id = 2;
  string address = 3;
  string phone = 4;
  string note = 5;
}

message ListDeliveriesRequest {
  int64 page = 1;
  int64 page_size = 2;
}

service LogisticsService {
  rpc CreateDelivery(CreateDeliveryRequest) returns (Delivery);
  rpc ListDeliveries(ListDeliveriesRequest) returns (stream Delivery);
}
